--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -53,6 +53,16 @@ button {
     background-color: #ffbe2e;
     border-radius: 5px;
     margin: 20px auto;
+    
+      -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+    &:hover {
+        background-color: #ffffff;
+        color: #000000;
+    }
+    
 }
 
 
