--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -132,15 +132,24 @@ button {
             float: left;
             padding: 27px 15px 15px 15px;
     
-            &li:nth-of-type(1n) {
+            &:nth-of-type(1n) {
                 clear: none;
             }
     
-            &li:nth-of-type(4n+1) {
+            &:nth-of-type(4n+1) {
                 clear: both;
             }
         }
     }
+
+  div:not(.sub-sidebar) {
+                    padding-top: 25px;
+                    color: #595959;
+
+                    &:hover {
+                        color: #b85a47;
+                    }
+                }
        
 /************* box position ****************/
 %absolute-center-center {
